Revision history for Test-Aggregate

0.370  Not Released
        - Fix interpolation bug that could cause 'Unrecognized escape'
          warning on some platforms.

0.369  2013-08-25
        - Don't print warning when exit() is called if it's called from
          a child process (if the pid has changed),
          since it seems likely that if the process has forked
          the child is expected to exit in some way.
        - Reformat dates in change log to appease CPAN::Changes.
          Thanks, Neil Bowers.

0.368  2013-08-14
        - Fix tests on windows

0.367  2013-08-13
        - Improve Test::Aggregate::Nested error handling:
          Don't treat undef as a failure;
          Show a warning and let Test::More::subtest() determine the result.
          This solves the false negative reported in
          https://rt.cpan.org/Public/Bug/Display.html?id=87240
          Thanks to the venerable Andreas J. König for reporting!
        - Add more tests.
        - Actually include previously added tests to the dist
          (Where are you Dist::Zilla?)

0.366  2013-07-11
        - Update metadata; Re-release to reindex with additional permissions

0.365  2013-07-10
        - Avoid printing unnecessary "ok - "'s diag()s when they are passing,
          and when the 'verbose' option is set to 0.
            - The problem was that the $verbose option was hard-coded as
              '2' deep inside the module.
        - Catch errors in tests under Test::Aggregate::Nested; report as ok(0)
        - Pod fixes
        - Update repository metadata

0.364  2010-12-04
        - Allow skipping the rest of a test using
            plan skip_all => $reason

0.363  2009-11-24
        - Pass current test name to setup and teardown.

0.362  2009-11-17
        - Removed broken "check_plan" from Test::Aggregate.  It was always
          dodgy and really doesn't contribute much and the latest release
          broke with 'no_plan'.  We now warn if we see this.